--- a/rei-admin/src/main/webapp/WEB-INF/view/login.html
+++ b/rei-admin/src/main/webapp/WEB-INF/view/login.html
@@ -55,7 +55,7 @@
             </div>
             <div class="form-group" style="float: right;">
                 <div style="text-align: right">
-                    <a href="#" name="">注 册</a>
+                    <a href="${ctxPath}/regesiter" name="">注 册</a>
                 </div>
             </div>
             </div>
