--- a/rei-admin/src/main/webapp/WEB-INF/view/regesiter.html
+++ b/rei-admin/src/main/webapp/WEB-INF/view/regesiter.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>rei - 登录</title>
+    <title>rei - 注册</title>
 
     <link rel="shortcut icon" href="${ctxPath}/static/favicon.ico">
     <link href="${ctxPath}/static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
@@ -25,7 +25,7 @@
         <div>
             <h1 class="logo-name">REI</h1>
         </div>
-        <h3>欢迎使用 REI</h3>
+        <h3>欢迎注册 REI</h3>
         <br/>
         <h4 style="color: red;">${tips!}</h4>
         <form class="m-t" role="form" action="${ctxPath}/login" method="post">
@@ -35,24 +35,7 @@
             <div class="form-group">
                 <input type="password" name="password" class="form-control" placeholder="密码" required="">
             </div>
-            @if(kaptcha.getKaptchaOnOff() == true){
-            <div class="form-group" style="float: left;">
-                <div class="col-sm-8" style="padding-left: 0px; padding-right: 0px;">
-                    <input class="form-control" type="text" name="kaptcha" placeholder="验证码" required="">
-                </div>
-                <div class="col-sm-4" style="padding-left: 0px; padding-right: 0px;">
-                    <img src="${ctxPath}/kaptcha" id="kaptcha" width="100%" height="100%"/>
-                </div>
-            </div>
-            @}
-            <div class="form-group" style="float: left;">
-                <div class="checkbox" style="text-align: left">
-                    <label>
-                        <input type="checkbox" name="remember" style="margin-top: 2px;">记住我
-                    </label>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary block full-width m-b">登 录</button>
+            <button type="submit" class="btn btn-primary block full-width m-b">注 册</button>
             </p>
         </form>
     </div>
