--- a/rei-admin/src/main/webapp/WEB-INF/view/regesiter.html
+++ b/rei-admin/src/main/webapp/WEB-INF/view/regesiter.html
@@ -28,27 +28,21 @@
         <h3>欢迎注册 REI</h3>
         <br/>
         <h4 style="color: red;">${tips!}</h4>
-        <form class="m-t" role="form" action="${ctxPath}/login" method="post">
+        <form class="m-t" role="form" action="${ctxPath}/regesiter" method="post">
             <div class="form-group">
-                <input type="text" name="username" class="form-control" placeholder="用户名" required="">
+                <input type="text" name="username" id="username" class="form-control" placeholder="用户名" required="">
             </div>
             <div class="form-group">
-                <input type="password" name="password" class="form-control" placeholder="密码" required="">
+                <input type="password" name="password" id="password" class="form-control" placeholder="密码" required="">
             </div>
-            <button type="submit" class="btn btn-primary block full-width m-b">注 册</button>
+            <div class="form-group">
+                <input type="password" name="checkPassword" id="checkPassword" class="form-control" placeholder="确认密码" required="">
+            </div>
+            <button type="submit" class="btn btn-primary block full-width m-b btn-reg">注 册</button>
             </p>
         </form>
     </div>
 </div>
-
-<script>
-    $(function () {
-        $("#kaptcha").on('click', function () {
-            $("#kaptcha").attr('src', '${ctxPath}/kaptcha?' + Math.floor(Math.random() * 100)).fadeIn();
-        });
-    });
-</script>
-
 </body>
 
 </html>
