--- a/rei-admin/src/main/webapp/WEB-INF/view/common/_tab.html
+++ b/rei-admin/src/main/webapp/WEB-INF/view/common/_tab.html
@@ -7,7 +7,7 @@
                 <div class="dropdown profile-element">
                     <span><img alt="image" class="img-circle"
                                @if(isEmpty(avatar)){
-                                    src="${ctxPath}/static/img/girl.gif"
+                                    src="${ctxPath}/static/img/rei.jpg"
                                @}else{
                                     src="${ctxPath}/kaptcha/${avatar}"
                                @}
