--- a/rei-admin/src/main/webapp/WEB-INF/view/regesiter.html
+++ b/rei-admin/src/main/webapp/WEB-INF/view/regesiter.html
@@ -28,15 +28,26 @@
         <h3>欢迎注册 REI</h3>
         <br/>
         <h4 style="color: red;">${tips!}</h4>
-        <form class="m-t" role="form" action="${ctxPath}/regesiter" method="post">
+        <form class="m-t" role="form" action="${ctxPath}/regesiter"  id = "regesiterForm" method="post">
             <div class="form-group">
-                <input type="text" name="username" id="username" class="form-control" placeholder="用户名" required="">
+                <input type="text" name="username" id="username"  class="form-control" placeholder="用户名" required="">
             </div>
             <div class="form-group">
                 <input type="password" name="password" id="password" class="form-control" placeholder="密码" required="">
             </div>
             <div class="form-group">
-                <input type="password" name="checkPassword" id="checkPassword" class="form-control" placeholder="确认密码" required="">
+                <input type="password" name="checkPassword" id="checkPassword"  class="form-control" placeholder="确认密码" required="">
+            </div>
+            <div class="form-group">
+                <input type="text" id="email" name="email"  class="form-control" placeholder="邮箱地址" required="">
+            </div>
+            <div class="form-group" style="float: right;">
+                <div style="text-align: right">
+                    <a href="javascript:getCode();" id="getEmailCode">获取邮箱验证码</a>
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="text" id="code" name="code"  id="code" class="form-control" placeholder="验证码" required="">
             </div>
             <button type="submit" class="btn btn-primary block full-width m-b btn-reg">注 册</button>
             </p>
@@ -44,5 +55,19 @@
     </div>
 </div>
 </body>
-
 </html>
+<script>
+        function getCode() {
+            $.ajax({
+                url:  url = "${ctxPath}/getEmailCode",
+                data:'username='+$('#username').val()+"&password="+$('#password').val()+"&checkPassword="+$('#checkPassword').val()+"&email="+$('#email').val(),
+                type: "POST",
+                success: function(result) {
+                    console.log(result.code);
+                },
+                error: function(result) {
+                    alert('系统繁忙!请稍后再试。');
+                }
+            });
+        }
+</script>
