--- a/rei-admin/src/main/webapp/WEB-INF/view/system/user/user_view.html
+++ b/rei-admin/src/main/webapp/WEB-INF/view/system/user/user_view.html
@@ -38,7 +38,7 @@
                                                     value="${user.birthday}"
                                                     clickFun="laydate({istime: false, format: 'YYYY-MM-DD'})"/>
 
-                                            <#input id="citySel" name="部门" underline="true" readonly="readonly" value="${deptName}"
+                                            <#input id="citySel" name="部门" underline="true" disabled="disabled" value="${deptName}"
                                                     hidden="deptid" hiddenValue="${user.deptid}"
                                                     clickFun="UserInfoDlg.showInfoDeptSelectTree(); return false;"
                                                     style="background-color: #ffffff !important;"
