--- a/rei-admin/src/main/webapp/WEB-INF/view/blog/category/category_add.html
+++ b/rei-admin/src/main/webapp/WEB-INF/view/blog/category/category_add.html
@@ -7,15 +7,15 @@
 
             <div class="row">
                 <div class="col-sm-6 b-r">
-                            <#input id="id" name="主键id" underline="true"/>
-                            <#input id="userId" name="用户id" underline="true"/>
-                            <#input id="name" name="类别名称"/>
+                    <#input id="name" name="类别名称"/>
                 </div>
 
                 <div class="col-sm-6">
-                            <#input id="onShow" name="是否展示" underline="true"/>
-                            <#input id="updateTime" name="更新时间" underline="true"/>
-                            <#input id="createTime" name="创建时间" underline="true"/>
+                    <#select id="onShow" name="是否展示">
+                        <option value="">请选择</option>
+                        <option value="1">是</option>
+                        <option value="0">否</option>
+                    </#select>
                 </div>
             </div>
 
