博客业务逻辑模块

--- a/rei-admin/src/main/webapp/WEB-INF/view/blog/article/article_add.html
+++ b/rei-admin/src/main/webapp/WEB-INF/view/blog/article/article_add.html
@@ -12,7 +12,7 @@
                     <#input id="author" name="作者" underline="true"/>
                     <#input id="simpleDesc" name="描述" underline="true"/>
                     <#input id="bannerUrl" name="banner图链接" underline="true"/>
-                    <#selectBynow id="labels" name="文章类别" options="${catList}"/>
+                    <#selectBynow id="categoryId" name="文章类别" options="${catList}"/>
                 </div>
 
                 <div class="col-sm-6">
