--- a/rei-admin/src/main/webapp/WEB-INF/view/blog/article/article_edit.html
+++ b/rei-admin/src/main/webapp/WEB-INF/view/blog/article/article_edit.html
@@ -2,42 +2,56 @@
 <div class="ibox float-e-margins">
     <div class="ibox-content">
         <div class="form-horizontal">
-
-            <input type="hidden" id="id" value="${item.id}">
-
             <div class="row">
+                <input id="id" type="hidden" value="${item.id}"/>
+                <input type="hidden" id="detailVal" value=" ${item.detail}">
                 <div class="col-sm-6 b-r">
-                            <#input id="id" name="主键" value="${item.id}" underline="true"/>
-                            <#input id="userId" name="用户id" value="${item.userId}" underline="true"/>
-                            <#input id="categoryId" name="类别id" value="${item.categoryId}" underline="true"/>
-                            <#input id="author" name="作者" value="${item.author}" underline="true"/>
-                            <#input id="title" name="文章名" value="${item.title}" underline="true"/>
-                            <#input id="copyFrom" name="转载链接" value="${item.copyFrom}" underline="true"/>
-                            <#input id="simpleDesc" name="简单描述" value="${item.simpleDesc}" underline="true"/>
-                            <#input id="bannerUrl" name="banner图链接" value="${item.bannerUrl}" />
+                    <#input id="title" name="文章名" value="${item.title}" underline="true"/>
+                    <#input id="author" name="作者" value="${item.author}" underline="true"/>
+                    <#input id="simpleDesc" name="描述" value="${item.simpleDesc}"  underline="true"/>
+                    <#input id="bannerUrl" name="banner图链接" value="${item.bannerUrl}" underline="true"/>
+                    <#selectBynow id="labels" name="文章类别" options="${catList}"/>
                 </div>
 
                 <div class="col-sm-6">
-                            <#input id="keywords" name="关键字  标签" value="${item.keywords}" underline="true"/>
-                            <#input id="detail" name="内容" value="${item.detail}" underline="true"/>
-                            <#input id="onShow" name="是否展示" value="${item.onShow}" underline="true"/>
-                            <#input id="hits" name="点击数" value="${item.hits}" underline="true"/>
-                            <#input id="postNum" name="评论数" value="${item.postNum}" underline="true"/>
-                            <#input id="createStatus" name="原创1;转载0" value="${item.createStatus}" underline="true"/>
-                            <#input id="createTime" name="创建时间" value="${item.createTime}" underline="true"/>
-                            <#input id="updateTime" name="更新时间" value="${item.updateTime}" />
-                </div>
-            </div>
+                    <#input id="keywords" name="标签" value="${item.keywords}" underline="true"/>
+                    <#select id="onShow" name="是否展示"  underline="true">
+                    <option value="">请选择</option>
+                    <option value="1">是</option>
+                    <option value="0">否</option>
+                </#select>
+                <#select id="createStatus" name="是否原创"  underline="true">
+                <option value="">请选择</option>
+                <option value="1">是</option>
+                <option value="0">否</option>
+            </#select>
+            <#input id="copyFrom" name="转载链接" value="${item.copyFrom}" underline="true"/>
+        </div>
 
-            <div class="row btn-group-m-t">
-                <div class="col-sm-10">
-                    <#button btnCss="info" name="提交" id="ensure" icon="fa-check" clickFun="ArticleInfoDlg.editSubmit()"/>
-                    <#button btnCss="danger" name="取消" id="cancel" icon="fa-eraser" clickFun="ArticleInfoDlg.close()"/>
+        <div class="col-sm-12">
+            <div class="form-group">
+                <label class="col-sm-1 control-label">内容</label>
+                <div class="col-sm-11">
+                    <div id="editor" class="editorHeight">
+
+                    </div>
                 </div>
             </div>
         </div>
 
+
+    </div>
+
+    <div class="row btn-group-m-t">
+        <div class="col-sm-10">
+            <#button btnCss="info" name="提交" id="ensure" icon="fa-check" clickFun="ArticleInfoDlg.editSubmit()"/>
+            <#button btnCss="danger" name="取消" id="cancel" icon="fa-eraser" clickFun="ArticleInfoDlg.close()"/>
+        </div>
     </div>
 </div>
+
+</div>
+</div>
+<script type="text/javascript" src="//unpkg.com/wangeditor/release/wangEditor.min.js"></script>
 <script src="${ctxPath}/static/modular/blog/article/article_info.js"></script>
 @}
